# fast_zero_async

./: .gitignore  pyproject.toml
fast_zero_assync/: app.py  database.py  models.py  schemas.py  security.py
fast_zero_assync/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 18a36074466a_create_todos_table.py  c5cd08b674ef_initial_migration.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
